# ZoomPollMaster

./: .env  .replit  README.md  app.py  build_exe.py  chatgpt_integration.py  config.json  config.py  credential_manager.py  find_coordinates.py  gui.py  logger.py  main.py  main_app.py  poll_posting.py  pyproject.toml  replit.nix  run.py  run_poll_generator.py  scheduler.py  setup.ps1  setup.sh  test_zoom.py  transcript_capture.py  zoom_automation.py
attached_assets/: Pasted--Automated-Zoom-Poll-Generator-Enhanced-Documentation-1-Project-Overview-Objective--1744691893619.txt  Pasted-Develop-a-high-security-fully-automated-desktop-application-based-on-the-provided-documentation-Th-1744691912230.txt  Pasted-Develop-a-production-grade-highly-secure-desktop-application-in-Python-packaged-as-a-standalone-ex-1744697930875.txt  Pasted-Everything-looks-good-so-far-but-I-still-don-t-see-where-I-can-enter-the-Zoom-Meeting-ID-and-Passco-1744699825754.txt  Pasted-Production-Grade-Automated-Zoom-Poll-Generator-Documentation-1-Project-Overview-Objective-Develop--1744697919399.txt
docs/: ARCHITECTURE.md  GITHUB_RELEASE.md  INSTALLATION.md  README.md  USER_GUIDE.md
templates/: chatgpt_setup.html  index.html  login.html
