[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "chromedriver-autoinstaller>=0.6.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.74.0",
    "psycopg2-binary>=2.9.10",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.12.0",
    "pyperclip>=1.9.0",
    "pysimplegui>=5.0.8.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "selenium>=4.31.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
